updated Toggle Component with icons props.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -5,17 +5,18 @@
     --bg-dark-1: #CECECE;
     --bg-dark-2: #E1E1E1;
     --bg-dark-3: #25262608;
+    --bg-dark-4: #D9D9D9;
     --bg-dark-5: #2526260D;
+    --bg-dark-6: #F2F2F2;
+    --bg-dark-7: #353535;
     --bg-dark-8: #25262614;
     --bg-dark-10: #EBE6C81A;
-    --bg-dark-4: #D9D9D9;
     --bg-light: #FFFFFF;
     --bg-light-1: #EFEFEF;
     --bg-light-2: #F4F4F4;
     --bg-primary: #FFFFFF;
     --bg-secondary: #EBE6C8;
     --bg-dark-15: #2526261A;
-    --bg-dark-6: #F2F2F2;
     --bg-dark-overlay: #000000E5;
     
     --border-black: #1C1D22;
@@ -30,6 +31,7 @@
     --color-light-80: #FFFFFF80;
     --color-dark: #666666;
     --color-dark-1: #6A6A6A;
+    --color-dark-2: #616161;
     --color-dark-5: #2526260D;
     --color-dark-70: #252626B2;
     --color-black: #000000;
