added TransactionDetailForBulk component and modified ConfirmButton so that accept any style.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -10,6 +10,7 @@
   --bg-dark-6: #f2f2f2;
   --bg-dark-7: #353535;
   --bg-dark-8: #25262614;
+  --bg-dark-9: #A0A0A0;
   --bg-dark-10: #ebe6c81a;
   --bg-light: #ffffff;
   --bg-light-1: #efefef;
