feat: tokenList responsive

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -18,6 +18,7 @@
   --bg-primary: #ffffff;
   --bg-secondary: #ebe6c8;
   --bg-dark-15: #2526261a;
+  --bg-light-15: #f5f5f5;
   --bg-dark-overlay: #000000e5;
 
   --border-black: #1c1d22;
