modified mobile header.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -46,6 +46,7 @@
   --color-disabled: #2526264d;
   --color-success: #b1a459;
   --color-red: #d25e77;
+  --color-gray-secondary: #979797;
 
   --green-stroke: #22c55e;
   --red-stroke: #ef4444;
