--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -38,6 +38,7 @@
   --color-dark-1: #6a6a6a;
   --color-dark-2: #616161;
   --color-dark-3: #6f6f6f;
+  --color-dark-4: #4A4A4A;
   --color-dark-5: #2526260d;
   --color-dark-70: #252626b2;
   --color-black: #000000;
